<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/gridSizeButton"
        android:icon="@drawable/ic_baseline_grid_on_24"
        android:onClick="gridSizeChangeOnClick"
        android:title="@string/grid_size"
        app:showAsAction="always"
        tools:targetApi="o" />
    <item
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:onClick="logInMenuClicked"
        android:title="Acoount"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settingsMenu"
        android:icon="@drawable/ic_baseline_settings_24"
        android:onClick="menuItemOnClick"
        android:title="@string/menu_settings_text" />
    <item
        android:id="@+id/aboutMenu"
        android:icon="@drawable/ic_baseline_info_24"
        android:onClick="menuItemOnClick"
        android:title="@string/menu_about_text" />
</menu>